hqmv2: driver for Intel Hardware Queue Manager (v2)
The hqmv2 driver is a kernel module that supports configuration
and use of the HQM 2.0 device. HQM is a hardware managed system
of queues and arbiters connecting producers and consumers,
providing efficient load-balancing, reordering, and core-to-core
queueing.

Driver version 9.0.3, corresponding to the contents of source release
package 4.

Signed-off-by: Gage Eads <gage.eads@intel.com>

--- a/drivers/staging/Kconfig
+++ b/drivers/staging/Kconfig
@@ -123,4 +123,6 @@ source "drivers/staging/hp/Kconfig"
 
 source "drivers/staging/wfx/Kconfig"
 
+source "drivers/staging/hqmv2/Kconfig"
+
 endif # STAGING
