--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -1464,15 +1464,15 @@
                 }
             ],
             "description": "intel_rapl support for Icelake server, Cannonlake desktop Icelake desktop, ElkhartLake and Tigerlake mobile",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Evelyn Fields",
                     "email": "evelyn.fields@intel.com"
                 }
             ],
-            "jira": "",
-            "name": "rapl",
+            "jira": "NEXT-1693",
+            "name": "rapl/idle",
             "repourl": "ssh://git-ccr-1.devtools.intel.com:29418/otc_linux_rui-rapl",
             "sdl_contact": [
                 {
