manifest_in.json: enabling tracehub branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -1240,14 +1240,14 @@
                 }
             ],
             "description": "Contains support for ICL and TGL and EHL and CML",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Marcus Winston",
                     "email": "marcus.winston@intel.com"
                 }
             ],
-            "jira": "",
+            "jira": "NEXT-1694",
             "name": "tracehub",
             "repourl": "ssh://git-amr-4.devtools.intel.com:29418/ash-pullme.git",
             "sdl_contact": [
