--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -3034,11 +3034,23 @@
             "branch_type": "expiring",
             "config_options": [
                 {
-                    "name": "CONFIG_PTP_INTEL_PMC_TGPIO",
+                    "name": "CONFIG_CAN_M_CAN_PCI",
                     "value": "m"
                 },
                 {
-                    "name": "CONFIG_PTP_INTEL_TGPIO",
+                    "name": "CONFIG_CAN_CALC_BITTIMING",
+                    "value": "m"
+                },
+                {
+                    "name": "CONFIG_INTEL_ADC",
+                    "value": "m"
+                },
+                {
+                    "name": "CONFIG_INTEL_QEP",
+                    "value": "m"
+                },
+                {
+                    "name": "CONFIG_PWM_DWC",
                     "value": "m"
                 }
             ],
@@ -3049,23 +3061,19 @@
                 }
             ],
             "description": "TGPIO branch",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Abdul Rahman Ismail",
                     "email": "abdul.r.ismail@intel.com"
                 },
                 {
-                    "name": "Hall, Christopher S",
-                    "email": "christopher.s.hall@intel.com"
-                },
-                {
                     "name": "Tan, Raymond",
                     "email": "raymond.tan@intel.com"
                 }
             ],
-            "jira": "",
-            "name": "TGPIO",
+            "jira": "NEXT-1695",
+            "name": "ADC/TGPIO/PWM/QEP/MCAN",
             "repourl": "git://git-amr-4.devtools.intel.com/jarkkoni-linux.git",
             "sdl_contact": [
                 {
