manifest_in.json: add jira number for intel-next branding and clear-patches branches

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -1880,7 +1880,7 @@
                     "email": "kyle.d.pelton@intel.com"
                 }
             ],
-            "jira": "",
+            "jira": "NXT-1697",
             "name": "branding",
             "repourl": "ssh://git-amr-4.devtools.intel.com:29418/otc_power-kernel.git",
             "sdl_contact": [
@@ -2606,7 +2606,7 @@
                     "email": "kyle.d.pelton@intel.com"
                 }
             ],
-            "jira": "",
+            "jira": "NEXT-1698",
             "name": "clear_patches",
             "repourl": "ssh://git-amr-4.devtools.intel.com:29418/otc_power-kernel.git",
             "sdl_contact": [
