manifest_in.json: enabling powertop branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -846,14 +846,14 @@
                 }
             ],
             "description": "Enable out of tree powertop",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Nivedita Swaminathan",
                     "email": "Nivedita.Swaminathan@intel.com"
                 }
             ],
-            "jira": "",
+            "jira": "NEXT-1700",
             "name": "powertop",
             "repourl": "ssh://git-amr-4.devtools.intel.com:29418/otc_power-kernel.git",
             "sdl_contact": [
