manifest_in.json: change CONFIG_CAN_CALC_BITTIMING from m to y

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -2999,7 +2999,7 @@
                 },
                 {
                     "name": "CONFIG_CAN_CALC_BITTIMING",
-                    "value": "m"
+                    "value": "y"
                 },
                 {
                     "name": "CONFIG_INTEL_ADC",
