manifest_in.json: enabling pci driver branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -1792,14 +1792,14 @@
                 }
             ],
             "description": "Intel PCI driver related fixes",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Ashok Raj",
                     "email": "ashok.raj@intel.com"
                 }
             ],
-            "jira": "",
+            "jira": "NEXT-1701",
             "name": "pci",
             "repourl": "ssh://git@gitlab.devtools.intel.com:29418/skuppusw/linux.git",
             "sdl_contact": [
