--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -2986,14 +2986,6 @@
             "branch_type": "expiring",
             "config_options": [
                 {
-                    "name": "CONFIG_CAN_M_CAN_PCI",
-                    "value": "m"
-                },
-                {
-                    "name": "CONFIG_CAN_CALC_BITTIMING",
-                    "value": "y"
-                },
-                {
                     "name": "CONFIG_INTEL_ADC",
                     "value": "m"
                 },
@@ -3008,6 +3000,18 @@
                 {
                     "name": "CONFIG_INTEL_QEP",
                     "value": "m"
+                },
+                {
+                    "name": "CONFIG_CAN_M_CAN",
+                    "value": "m"
+                },
+                {
+                    "name": "CONFIG_CAN_M_CAN_PCI",
+                    "value": "m"
+                },
+                {
+                    "name": "CONFIG_CAN_CALC_BITTIMING",
+                    "value": "y"
                 }
             ],
             "contributor": [
