manifest_in.json: Enabling VPU/IPC branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -2764,7 +2764,7 @@
                 }
             ],
             "description": "VPU/IPC support for Keem Bay and TBH",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Farrell, David T",
