manifest_in.json: Enabling TBH IO branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -3099,7 +3099,7 @@
                 }
             ],
             "description": "Thunderbay I/O drivers",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Ajit Tapkir",
