manifest_in.json: Add Alexander's Perf core updates branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -3172,6 +3172,36 @@
             ],
             "status": "intel confidential",
             "stuck_at_ref": ""
+        },
+        {
+            "branch": "perf-aux-dev",
+            "branch_type": "expiring",
+            "config_options": [],
+            "contributor": [
+                {
+                    "name": "Alexander Shishkin",
+                    "email": "alexander.shishkin@linux.intel.com"
+                }
+            ],
+            "description": "Perf core updates, Intel PT/AUX related",
+            "enabled": true,
+            "ip_owner": [
+                {
+                    "name": "Alexander Shishkin",
+                    "email": "alexander.shishkin@linux.intel.com"
+                }
+            ],
+            "jira": "NEXT-1713",
+            "name": "Perf core updates",
+            "repourl": "git://git.kernel.org/pub/scm/linux/kernel/git/ash/linux.git",
+            "sdl_contact": [
+                {
+                    "name": "Kai Svahn",
+                    "email": "kai.svahn@intel.com"
+                }
+            ],
+            "status": "public",
+            "stuck_at_ref": ""
         }
     ]
 }
