--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -1081,8 +1081,8 @@
                     "email": "gayatri.kammela@intel.com"
                 }
             ],
-            "description": "TGL, EHL PMC core driver changes and new AVX512 cpuid support",
-            "enabled": false,
+            "description": "TGL, EHL, RKL PMC core driver changes and new AVX512 cpuid support",
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Mark Charney",
@@ -1093,8 +1093,8 @@
                     "email": "christopher.j.lake@intel.com"
                 }
             ],
-            "jira": "",
-            "name": "avx512",
+            "jira": "NEXT-1716",
+            "name": "pmc_core",
             "repourl": "ssh://git-ger-6.devtools.intel.com:29418/secure_git_internal_repo-my_internal_repo.git",
             "sdl_contact": [
                 {
