manifest_in.json: Actually enable IMS for v5.5

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -1692,7 +1692,7 @@
                 }
             ],
             "description": "Interrupt Message Store",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Megha Dey",
