--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -3151,7 +3151,7 @@
                 }
             ],
             "description": "TGL/EHL TGPIO branch",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Christopher S Hall",
@@ -3170,7 +3170,7 @@
                     "email": "alok.anand@intel.com"
                 }
             ],
-            "jira": "",
+            "jira": "NEXT-1721",
             "name": "Time-aware GPIO Support Code",
             "repourl": "ssh://git@gitlab.devtools.intel.com:29418/chall/christopher-hall-kernel-contribution.git",
             "sdl_contact": [
