--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -3151,7 +3151,7 @@
                 }
             ],
             "description": "TGL/EHL TGPIO branch",
-            "enabled": true,
+            "enabled": false,
             "ip_owner": [
                 {
                     "name": "Christopher S Hall",
