--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -425,14 +425,14 @@
                 }
             ],
             "description": "ICX NTB intel_ntb_hw driver",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Rajesh Pamujula",
                     "email": "rajesh.s.pamujula@intel.com"
                 }
             ],
-            "jira": "",
+            "jira": "NEXT-1725",
             "name": "ntb",
             "repourl": "ssh://git-amr-1.devtools.intel.com:29418/csig_storage_group-linux-kernel.git",
             "sdl_contact": [
