--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -1134,7 +1134,7 @@
                 }
             ],
             "description": "Enable Ethernet TSN driver for SNPS QOS",
-            "enabled": true,
+            "enabled": false,
             "ip_owner": [
                 {
                     "name": "Kasichainula, Kishore",
