manifest_in.json: Enable RAR branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -2711,14 +2711,14 @@
                 }
             ],
             "description": "Intel RAR patches",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Ido  Ouziel",
                     "email": "ido.ouziel@intel.com"
                 }
             ],
-            "jira": "",
+            "jira": "NEXT-1728",
             "name": "rar",
             "repourl": "ssh://git-amr-1.devtools.intel.com:29418/linux_yyu-rar",
             "sdl_contact": [
