manifest_in.json: Fixup branch set to intel confidential status

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -2307,7 +2307,7 @@
                     "email": "charles.d.prestopine@intel.com"
                 }
             ],
-            "status": "public",
+            "status": "intel confidential",
             "stuck_at_ref": ""
         },
         {
