manifest_in.json: Disable Alan's multi-slice Hantro driver for THB branch

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -3244,7 +3244,7 @@
                 }
             ],
             "description": "Adding multi-slice\nHantro driver for THB",
-            "enabled": true,
+            "enabled": false,
             "ip_owner": [
                 {
                     "name": "Tan, Alan Chin Loon",
