manifest_in.json: Remove trailing \n from manifest
Signed-off-by: Gayatri Kammela <gayatri.kammela@intel.com>

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -3247,7 +3247,7 @@
                     "email": "alan.chin.loon.tan@intel.com"
                 }
             ],
-            "description": "Adding multi-slice\nHantro driver for THB",
+            "description": "Adding multi-slice Hantro driver for THB",
             "enabled": false,
             "ip_owner": [
                 {
