manifest_in.json: Re-enable hantro driver

--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -3248,7 +3248,7 @@
                 }
             ],
             "description": "Adding multi-slice Hantro driver for THB",
-            "enabled": false,
+            "enabled": true,
             "ip_owner": [
                 {
                     "name": "Tan, Alan Chin Loon",
