--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -2403,7 +2403,7 @@
             ],
             "jira": "NEXT-1734",
             "name": "AMX/TMUL",
-            "repourl": "git://git-amr-4.devtools.intel.com/enabling_cldemote_in_linux_kerne-linux_git.git",
+            "repourl": "ssh://git-amr-4.devtools.intel.com:29418/enabling_cldemote_in_linux_kerne-linux_git.git",
             "sdl_contact": [
                 {
                     "name": "Israel Hirsh",
@@ -3059,7 +3059,7 @@
             ],
             "jira": "NEXT-1695",
             "name": "ADC/TGPIO/PWM/QEP/MCAN",
-            "repourl": "git://git-amr-4.devtools.intel.com/jarkkoni-linux.git",
+            "repourl": "ssh://git-amr-4.devtools.intel.com:29418/jarkkoni-linux.git",
             "sdl_contact": [
                 {
                     "name": "Svahn, Kai",
