--- a/eywa/manifest_in.json
+++ b/eywa/manifest_in.json
@@ -3059,7 +3059,7 @@
             ],
             "jira": "NEXT-1695",
             "name": "ADC/TGPIO/PWM/QEP/MCAN",
-            "repourl": "ssh://git-amr-4.devtools.intel.com:29418/jarkkoni-linux.git",
+            "repourl": "git://git-amr-4.devtools.intel.com/jarkkoni-linux.git",
             "sdl_contact": [
                 {
                     "name": "Svahn, Kai",
